welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value reculeSiestFaceMur
	reculeSiestFaceMur();
        ^Program:3: error: not found: value avanceSiestFaceMur
}else{avanceSiestFaceMur();
      ^