welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFaceMur){
	reculeSiestFaceMur();
}else{avanceSiestFaceMur();
}